--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,9 @@ a:hover{
     .link, .facebook, .twitter{
         display: none;
     }
+    .nav{
+        overflow: hidden;
+    }
 }
 
 /* ---------------------home------------------- */
@@ -114,6 +117,7 @@ a:hover{
     color: white;
     font-size: 56px;
     font-weight: 700;
+    margin-right: 1rem;
 }
 .heading:after {
 	content: "SERVICES";
@@ -162,6 +166,11 @@ a:hover{
 .head > button:hover{
     background-color: transparent;
     color: var(--green);
+}
+@media only screen and (max-width: 1303px){
+    .heading{
+        text-align: center;
+    }
 }
 /* -----------------------intro------------------------ */
 .intro{
@@ -230,7 +239,7 @@ a:hover{
     flex-wrap: wrap;
 }
 .intro-card1{
-    /* border: 2px solid red; */
+    /* border: 2px solid blue; */
     width: 30%;
     display: flex;
     flex-direction: column;
@@ -289,6 +298,33 @@ a:hover{
     font-size: 16px;
     color:var(--textColor);
 }
+@media only screen and (max-width: 1000px){
+    .text{
+        width: 100%;  
+    }
+    .image{
+        margin-top: 5%;
+        width: 100%;        
+    }
+    .intro-card{
+        /* border: 2px solid red; */
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+    }
+    .intro-card1{
+        /* border: 2px solid blue; */
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .intro-card1 > .intro-para > h4, .intro-card1 > .intro-para > p{
+        text-align: center;
+        margin-bottom: 10px;
+    }
+}
 
 /* ----------------------services------------------------ */
 .service-sec1{
@@ -326,7 +362,7 @@ a:hover{
 }
 .service-card1{
     width: 28%;
-    height: 34rem;
+    /* height: 34rem; */
     border: 1px solid rgba(128, 128, 128, 0.3);
     border-radius: 10px;
     display: flex;
@@ -410,14 +446,14 @@ a:hover{
 /* Division Section:-  */
 .big-card1, .big-card2{
     width: 100%;
-    height: 88vh;
     /* border: 2px solid blue; */
     display: flex;
     background-color: white;
 }
 .service-image1, .service-image2{
-    /* border: 2px solid green; */
+    /* border: 2px solid rgb(0, 0, 0); */
     width: 50%;
+    height: 80vh;
     background-image: url("./bg_files/bigcard1.jpg");
     background-size: cover;
     background-position: center;
@@ -616,14 +652,46 @@ a:hover{
     color: rgb(72,74,70);
 }
 
+@media only screen and (max-width: 1000px){
+    .service-card1{
+        margin-bottom: 8%;
+        width: 80%;
+    }
+    .cards{
+        width: 100%;
+        /* border: 2px solid blue; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .service-card1 > button{
+        padding: 2% 7%;
+    }
+    .service-image1, .service-image2{
+        width: 100%;
+    }
+    .big-card1, .big-card2{
+        /* border: 2px solid blue; */
+        display: flex;
+        flex-direction: column;
+    }
+    .service-content1, .service-content2{
+        width: 100%;
+        margin: 5%;
+    }
+    .testimonials > .card1 {
+        width: 100%;
+    }
+}
+
 /* ----------------call me------------------- */
 .call-me{
     width: 100%;
-    height: 95vh;
     background-color: rgb(21,62,82);
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 10%;
 }
 .sec{
     /* border: 2px solid lime; */
@@ -689,8 +757,6 @@ a:hover{
 }
 .sec >  .forms > form > .name{
     position: relative;
-    /* border: 2px solid lightblue;   */
-    /* padding: 1rem 1.5rem; */
 }
 .sec > .forms > form > .name > input{
     background-color: rgb(42,93,119);
@@ -754,6 +820,18 @@ form > .call-button:hover{
     color: var(--green);
     background-color: transparent;
 }
+@media only screen and (max-width: 1000px){
+    .sec{
+        flex-direction: column;
+    }
+    .sec > .content{
+        width: 100%;
+    }
+    .forms{
+        width: 100%;
+    }
+}
+
 
 /* ----------------projects------------------- */
 .projects{
@@ -790,6 +868,7 @@ list-style-type: none;
 align-items: center;
 justify-content: center;
 margin: 0;
+flex-wrap: wrap;
 }
 
 .projects .cotegory-list-container ul button{
@@ -814,12 +893,9 @@ color: white;
 .projects > .project-image{
     /* border: 2px solid red; */
     width: 90%;
-    /* height: 500px; */
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr 1fr;
-    /* margin: ; */
-
 }
 .projects > .project-image > .item{
     overflow: hidden;
@@ -894,18 +970,37 @@ color: white;
 
 }
 
+@media only screen and (max-width: 770px){
+    .projects > .project-image{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: repeat(4, 1fr);
+    }
+}
+@media only screen and (max-width: 1000px){
+    .team-card{
+        flex-direction: column;
+    }
+    .team-card1{
+        width: 100%;
+        margin-bottom: 5%;
+    }
+    .logo i{
+        display: none; 
+    }
+}
+
  /* ----------------------About-------------------------- */
 
 .about{
 width: 100%;
-height: 90vh;
-/* border: 2px solid red;  */
+/* border: 2px solid red; */
 background-color: white;
 display: flex;
 justify-content:space-around;
 padding: 8%;
 }
 .about > img{
+    width: 50%;
   border-radius: 5px;
 }
 .about > .paragraph > h5{
@@ -971,7 +1066,23 @@ padding: 8%;
     color: var(--green);
     /* border: 2px solid green; */
 }
-
+@media only screen and (max-width: 1000px){
+    .about{
+        flex-direction: column;
+    }
+    .about > img{
+        width: 100%;
+        display: block;
+    }
+    .paragraph{
+        width: 100%;
+        margin: 5% 0;
+    }
+    .number{
+        margin: 3% 0;
+        width: 60%;
+    }
+}
 /* -----------------contact--------------------- */
 
 .contact{
@@ -1171,6 +1282,24 @@ padding: 8%;
     color: var(--green);
     background-color: transparent;
 }
+
+@media only screen and (max-width: 1000px){
+    .sub-contact{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+    .contact-details{
+        width: 100%;
+    }
+    .contact > .sub-contact > .contact-form > form{
+        margin-top: 20%;
+    }
+    .contact .contact-form{
+        width: 100%;
+    }
+}
+
 /* -----------------------footer-------------------- */
 footer{
     position: relative;
@@ -1187,12 +1316,11 @@ footer{
 
 .footer{
     width: 100%;
-    height: 350px;
+    /* height: 350px; */
     background-color: rgb(17,52,72);
     padding: 5% 5%;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 .last-sec{
     width: 90%;
@@ -1200,8 +1328,7 @@ footer{
     /* border: 2px solid lawngreen; */
     display: flex;
     justify-content: space-around;
-    align-items: center;
-    
+    align-items: center;  
 }
 footer .last-sec h1{
     font-size: 20px;
@@ -1225,6 +1352,14 @@ footer .last-sec .part2 a{
     font-family: var(--openSans);
     font-weight: 400;
     color: white;
-    /* border: 2px solid lawngreen;  */
-    
+    /* border: 2px solid lawngreen;*/
+}
+@media only screen and (max-width: 770px){
+    .last-sec{
+        flex-direction: column;
+        align-items:flex-start;  
+    }
+    footer .last-sec h1{
+        margin: 20% 0;
+    }
 }
