--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 :root{
     --openSans: 'Open Sans', sans-serif;
     --monstree: 'Montserrat', sans-serif;
@@ -522,6 +525,7 @@ a:hover{
     width:85%;
     justify-content: space-between;
     margin-bottom: 2rem;
+    flex-wrap: wrap;
 }
 .business, .expert, .quality{
     font-weight: 700;
@@ -671,17 +675,41 @@ a:hover{
         width: 100%;
     }
     .big-card1, .big-card2{
-        /* border: 2px solid blue; */
         display: flex;
         flex-direction: column;
     }
     .service-content1, .service-content2{
-        width: 100%;
+        width: 90%;
         margin: 5%;
+        padding: 0;
     }
     .testimonials > .card1 {
         width: 100%;
     }
+    .service-sec1 > h1{
+        width: 100%;
+    }
+    .service-content1 > .content > h1{
+        font-size: 20px;
+    }
+    .service-content1 > .content > ol > li{
+        font-size: 14px;
+    }
+    .service-content1 > .content > ol > li > span{
+        padding: 1.5% 3%;
+        margin-right: 1%;
+    }
+    .service-sec3 > p{
+        width: 98%;
+    }
+    .service-content1 > .content{
+        width: 100%;
+    }
+    .service-content2 > .content{
+        width: 100%;
+
+    }
+
 }
 
 /* ----------------call me------------------- */
@@ -694,7 +722,7 @@ a:hover{
     padding-top: 10%;
 }
 .sec{
-    /* border: 2px solid lime; */
+    /* border: 2px solid lime;  */
     padding: 0 7%;
     display: flex;
     justify-content: space-around;
@@ -849,7 +877,6 @@ font-family: var(--monstree);
 }
 
 .projects > span{
-/* margin-bottom: 10px; */
 font-weight: 600;
 color: var(--green);
 }
@@ -869,6 +896,7 @@ align-items: center;
 justify-content: center;
 margin: 0;
 flex-wrap: wrap;
+/* border: 2px solid red; */
 }
 
 .projects .cotegory-list-container ul button{
@@ -899,13 +927,30 @@ color: white;
 }
 .projects > .project-image > .item{
     overflow: hidden;
+    position: relative;
 }
-.projects > .project-image > .item > img:hover{
+.projects > .project-image > .item:hover > img{
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
     cursor: pointer;
     filter: brightness(60%);
 }
+
+.projects > .project-image > .item > span{
+    position: absolute;
+    opacity: 0;
+    color: white;
+    font-family: var(--monstree);
+    font-weight: 700;
+    font-size: 18px;
+    top: 50%;
+    left: 20%;
+    z-index: 5;
+}
+.projects > .project-image > .item:hover > span{
+    opacity: 1;
+}
+
 .consultants{
     display: flex;
     flex-direction: column;
@@ -975,6 +1020,12 @@ color: white;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: repeat(4, 1fr);
     }
+    .consultants > p{
+        width: 90%;
+    }
+    .consultants > h4{
+        width: 90%;
+    }
 }
 @media only screen and (max-width: 1000px){
     .team-card{
@@ -986,6 +1037,9 @@ color: white;
     }
     .logo i{
         display: none; 
+    }
+    .projects{
+        padding: 3rem 0;
     }
 }
 
@@ -1049,6 +1103,7 @@ padding: 8%;
 .number{
     /* border: 2px solid limegreen; */
     display: flex;
+    flex-wrap: wrap;
 
 }
 .about > .paragraph > .number > .num {
@@ -1057,6 +1112,7 @@ padding: 8%;
     font-size: 14px;
     font-weight: 500;
     color: var(--textColor);
+    /* border: 2px solid green; */
 }
 .about > .paragraph > .number > .num > #no{
     font-family: var(--monstree);
@@ -1081,6 +1137,13 @@ padding: 8%;
     .number{
         margin: 3% 0;
         width: 60%;
+    }
+    .about > .paragraph > .number > .num > #no{
+        line-height: 4rem;
+    }
+    .about > .paragraph > .number > .num > p{
+        margin-top: 10%;
+        margin-left: 10% ;
     }
 }
 /* -----------------contact--------------------- */
@@ -1203,6 +1266,7 @@ padding: 8%;
     display: flex;
     justify-content: space-between;
     cursor: pointer;
+    flex-wrap: wrap;
 }
 .contact .contact-form{
     /* border: 2px solid green; */
@@ -1297,6 +1361,10 @@ padding: 8%;
     }
     .contact .contact-form{
         width: 100%;
+    }
+    .stack{
+        width: 100%;
+        gap: 1rem;
     }
 }
 
